2003-12-27  Richard Spindler <oracle2025@gmx.de>

 *  Rubberframe only needs to touch the samples to select from now on
 *  'Sanefied' Selection DnD Stuff ;)

2003-12-23  Richard Spindler <oracle2025@gmx.de>

 *  Added prefs_misc.xpm
 *  Added ShortcutsDialog.cpp .h

2003-12-21  Georg E Schneider <georg@georgs.org>
  
 *  Build first rpm-package
 *  Corrections in rpm_build.sh and spec-file
 *  added *.desktop file

2003-12-16  Richard Spindler <oracle2025@gmx.de>

 *  Added 3d-Coloured Items

2003-12-14  Richard Spindler <oracle2025@gmx.de>

 *  Implemented Custom Snap Value Presets
 *  removed some variables for playback Position in Item and Track

2003-12-06  Richard Spindler <oracle2025@gmx.de>

 *  added stuff.h
 *  added SidePanel.cpp .h
 *  added FileInfoPanel.cpp .h
 *  ProgressBar for Exporting to WAV added

2003-11-30  Richard Spindler <oracle2025@gmx.de>

 *  added StatusProgressBar.cpp .h and UpdateListener.cpp .h and DisableListener.h .cpp
 *  Progressbars for Loading of Samples and Songs implemented

2003-11-26  Richard Spindler <oracle2025@gmx.de>

 *  fixed nasty Bug in TLTrack.cpp when sorting the List

2003-11-22  Richard Spindler <oracle2025@gmx.de>

 *  added Ruler.cpp .h

2003-11-21  Richard Spindler <oracle2025@gmx.de>

 *  added MiniPlayer.cpp .h
 *  added play_12.xpm stop_12.xpm

2003-11-20  Richard Spindler <oracle2025@gmx.de>

 *  fixed "random Mute" on Startup issue.
 *  added new Dependency on libsamplerate (http://www.mega-nerd.com/SRC/), this allows to load samples with various Samplerates, these are converted to 44100, there is a little delay when importing such samples.

2003-11-13  Richard Spindler <oracle2025@gmx.de>

 *  fixed Load- and Save-Dialogs to remember their last Folder and to use '*.ggseq' as file-extension

2003-11-09  Richard Spindler <oracle2025@gmx.de>

 *  added TLTrackVolumeDial.h .cpp
 *  implemented Volume control for individual Tracks
 *  implemented saving of Volume and Mute State
